--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -14,21 +14,46 @@
         <i class="ion ion-grid"></i>
     </a>
     <div class="row justify-content-center">
-        <!--=================== side menu ====================-->
            {% include '/default/navbar.html.twig' %}
-
-        <!--=================== side menu end====================-->
-
-        <!--=================== content body ====================-->
         <div class="col-lg-10 col-md-9 col-12 body_block  align-content-center">
             <div class="portfolio">
                 <div class="container-fluid">
                     <!--=================== masaonry portfolio start====================-->
                     <div class="grid img-container justify-content-center no-gutters">
-                        <div class="grid-sizer col-sm-12 col-md-6 col-lg-3"></div>
-                        <div class="grid-item branding  col-sm-12 col-md-6 col-lg-3">
+                        <div class=" col-sm-12 col-md-6 col-lg-3"></div>
+                        <div class="  col-sm-12 col-md-6 col-lg-3">
                             <a href="/img/portfolio/home-port1.png" title="project name 1">
-                                <div class="project_box_one">
+                                <div class="">
+                                    <img src="/img/portfolio/home-port1.png" alt="pro1" />
+                                    <div class="product_info">
+                                        <div class="product_info_text">
+                                            <div class="product_info_text_inner">
+                                                <i class="ion ion-plus"></i>
+                                                <h4>project name</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="  col-sm-12 col-md-6 col-lg-3">
+                            <a href="/img/portfolio/home-port1.png" title="project name 1">
+                                <div class="">
+                                    <img src="/img/portfolio/home-port1.png" alt="pro1" />
+                                    <div class="product_info">
+                                        <div class="product_info_text">
+                                            <div class="product_info_text_inner">
+                                                <i class="ion ion-plus"></i>
+                                                <h4>project name</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="  col-sm-12 col-md-6 col-lg-3">
+                            <a href="/img/portfolio/home-port1.png" title="project name 1">
+                                <div class="">
                                     <img src="/img/portfolio/home-port1.png" alt="pro1" />
                                     <div class="product_info">
                                         <div class="product_info_text">
@@ -42,7 +67,7 @@
                             </a>
                         </div>
                         
-                        <div class="grid-item  branding architecture  col-sm-12 col-md-6">
+                      {#  <div class="grid-item  branding architecture  col-sm-12 col-md-6">
                             <a href="/img/portfolio/home-port2.png" title="project name 2">
                                 <div class="project_box_one">
                                     <img src="/img/portfolio/home-port2.png" alt="pro1" />
@@ -56,8 +81,8 @@
                                     </div>
                                 </div>
                             </a>
-                        </div>
-                    {#    <div class="grid-item  design col-sm-12 col-md-6 col-lg-3">
+                        </div>#}
+                      {#  <div class="grid-item  design col-sm-12 col-md-6 col-lg-3">
                             <a href="/img/portfolio/home-port3.png" title="project name 5">
                                 <div class="project_box_one">
                                     <img src="/img/portfolio/home-port3.png" alt="pro1" />
