--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,204 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- 
+ {% include '/default/navbar.html.twig' %}
 </head>
 <body>
 <div class="loader">
     <div class="loader-outter"></div>
     <div class="loader-inner"></div>
 </div>
-
 <div class="body-container container-fluid">
     <a class="menu-btn" href="javascript:void(0)">
         <i class="ion ion-grid"></i>
     </a>
-    <div class="row justify-content-center">
-           {% include '/default/navbar.html.twig' %}
+    <div class="row justify-content-center">           
         <div class="col-lg-10 col-md-9 col-12 body_block  align-content-center">
             <div class="portfolio">
                 <div class="container-fluid">
-                    <!--=================== masaonry portfolio start====================-->
-                    <div class="grid img-container justify-content-center no-gutters">
-                        <div class=" col-sm-12 col-md-6 col-lg-3"></div>
-                        <div class="  col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port1.png" title="project name 1">
-                                <div class="">
-                                    <img src="/img/portfolio/home-port1.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
+                    <div class="grid img-container justify-content-center no-gutters">                        
+                        {% set count = 0 %}
+                        {% for POSTS in POST %}                            
+                            {% set count = count + 1 %}                           
+                        {% endfor %}                        
+                        <div class="row">                            
+                            {% set i = 0 %}
+                            {% for POSTS in POST %}                        
+                                <div class="  col-sm-12 col-md-6 col-lg-3 imgFus">
+                                    <a href="/img/portfolio/{{POSTS['img']}}" title="project name 1">
+                                        <div class="indexImgRedim">
+                                            <img src="/img/portfolio/{{POSTS['img']}}" alt="pro1" />
+                                            <div class="product_info">
+                                                <div class="product_info_text">
+                                                    <div class="product_info_text_inner">
+                                                        <i class="ion ion-plus"></i>
+                                                        <h4>{{POSTS['desc']}}</h4>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
-                            </a>
-                        </div>
-                        <div class="  col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port1.png" title="project name 1">
-                                <div class="">
-                                    <img src="/img/portfolio/home-port1.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
+                                {% if ((i+1) is divisible by(4)) and (i != 0) and ((i+1) != count)%}
                                     </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="  col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port1.png" title="project name 1">
-                                <div class="">
-                                    <img src="/img/portfolio/home-port1.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        
-                      {#  <div class="grid-item  branding architecture  col-sm-12 col-md-6">
-                            <a href="/img/portfolio/home-port2.png" title="project name 2">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port2.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
-                      {#  <div class="grid-item  design col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port3.png" title="project name 5">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port3.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
-                        
-                    {#    <div class="grid-item  photography design col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port4.png" title="project name 5">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port4.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
-                        
-                {#        <div class="grid-item  branding photography  col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port5.png" title="project name 5">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port5.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
-                        
-                  {#      <div class="grid-item   architecture design col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port6.png" title="project name 5">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port6.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
-                        
-               {#         <div class="grid-item  photography architecture col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port7.png" title="project name 5">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port7.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
-                        
-              {#          <div class="grid-item  branding design  col-sm-12 col-md-6 col-lg-3">
-                            <a href="/img/portfolio/home-port8.png" title="project name 5">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port8.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
-              
-                   {#     <div class="grid-item architecture  col-sm-12 col-md-6 col-lg-6">
-                            <a href="/img/portfolio/home-port9.png" title="project name 4">
-                                <div class="project_box_one">
-                                    <img src="/img/portfolio/home-port9.png" alt="pro1" />
-                                    <div class="product_info">
-                                        <div class="product_info_text">
-                                            <div class="product_info_text_inner">
-                                                <i class="ion ion-plus"></i>
-                                                <h4>project name</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>#}
+                                    <div class="row">
+                                {% endif %}
+                                {%set i = i + 1%}
+                            {% endfor %}                        
+                        </div>                        
                     </div>
-                    <!--=================== masaonry portfolio end====================-->
                 </div>
             </div>
         </div>
-        <!--=================== content body end ====================-->
     </div>
 </div>
 
